--- a/index.html
+++ b/index.html
@@ -166,8 +166,11 @@
 </nav>
 
 <div class="content" data-ice="content"><div data-ice="index" class="github-markdown"><h1 id="uglayout">UgLayout</h1>
-<p>(Ug)h Free (Layout) Management.</p>
+<p><strong>Ug</strong>h Free <strong>Layout</strong> Management.</p>
 <p>UgLayout is a perfomant, highly extensible framework for making configureable layouts with components.</p>
+<ul>
+<li><a href="https://steelsojka.github.io/ug-layout/">Documentation</a></li>
+</ul>
 <h2 id="concepts">Concepts</h2>
 <p>ugLayout is a tree of <strong>Renderable</strong> objects. A row is a renderable object and so are all items belonging to that row. ugLayout comes with the built in Renderables:</p>
 <ul>
